Fix padding and alignment on about page

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -274,6 +274,7 @@ h3.my-title {
 
 h1.my-title {
   font-size: 1.2rem;
+  font-weight: 200;
 }
 
 .top-10 {
